package superhero.model;

public record HeroResult(HeroLevel level, int score, double bodyMassIndex) {
}
